fixed booking page mobile alignment

--- a/style1.css
+++ b/style1.css
@@ -26,7 +26,7 @@ position: relative;
   background: black;
   padding:12px 7px 10px;
   color:white;
-  font-size: x-large;
+  font-size: 14px;
  width: 100%;
  border:none;
  margin:0px;
@@ -308,7 +308,7 @@ background-color: white;
     bottom: 0px;
    text-align: justify;
   color:black;
-  padding: 10px;
+  padding: 20px;
 }
 }
 
